[hat] Move tensor shape to load function